testsuite/tests/th/TH_implicitParamsErr2.stderr

TH_implicitParamsErr2.hs:5:9: error:
    • Implicit parameters mixed with other bindings
      When splicing a TH expression: let {?x = 1; y = 2}
 in y
    • In the untyped splice:
        $(letE
            [implicitParamBindD "x" [| 1 |],
             funD (mkName "y") [clause [] (normalB [| 2 |]) []]]
            (varE (mkName "y")))
