testsuite/tests/th/TH_implicitParamsErr2.hs
{-# LANGUAGE ImplicitParams #-}
{-# LANGUAGE TemplateHaskell #-}
import Language.Haskell.TH

main = $(letE [ implicitParamBindD "x" [e| 1 |]
              , funD (mkName "y") [clause [] (normalB [e| 2 |]) []]
              ]
              (varE (mkName "y")))
